k8s-manifests/apps/actual-budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  labels:
    app: actual-budget
spec:
  replicas: 1 # do to actual budget architecture, only one replica can run
  strategy:
    type: Recreate # when rolling a new version, pod must be destroyed, then started
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget

    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget
      securityContext:
        fsGroup: 1001
      containers:
        - name: actual-budget
          image: docker.io/actualbudget/actual-server:26.9.0
          ports:
            - containerPort: 5006
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 5006
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5006
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 200m
