k8s-manifests/apps/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  labels:
    app: actual-budget
spec:
  selector:
    app: actual-budget
  ports:
    - port: 80
      targetPort: 5006
