k8s-manifests/apps/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  labels:
    app: actual-budget
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - ab.s2n.donkeysharp.xyz
      secretName: homelab-s2n-wildcard-tls
  rules:
    - host: ab.s2n.donkeysharp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  number: 80
